--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>Oinarrizko App maketa</h1>
-<h2>Haierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
+<h2>Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
 
 <table class="tableIkustezina">
 	<tr id="thIkusitezina">
