0:Reproduktoreari abiadura eta loop botoiak gehitu

--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -3,7 +3,7 @@
   <head>
   	<meta charset="utf-8">
   	<title>Oinarrizko App maketa</title>
-  	<link rel="stylesheet" type="text/css" href="estiloa.css">
+  	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
   <form action="aukerak.html">
@@ -24,7 +24,8 @@
         <button class="play" data-icon="P" aria-label="play pause toggle"></button>
         <button class="stop" data-icon="S" aria-label="stop"></button>
         <div class="timer"><div></div><span aria-label="timer">00:00</span></div>
-        <button class="loop" data-icon="L" aria-label="loop"></button>
+        <button class="speed" data-icon="W" aria-label="speed"></button>
+        <button class="loop" data-icon="U" aria-label="loop"></button>
         <button class="rwd" data-icon="B" aria-label="rewind"></button>
         <button class="fwd" data-icon="F" aria-label="fast forward"></button>
       </div>
