--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -36,6 +36,17 @@
 		</td>		
 	</tr>
 </table>
+
+<form action="/video_HTML5_M.html" method="get" target="_self">
+	<select multiple="multiple">
+		<option value="1"> 1</option>
+		<option value="2"> 2</option>
+		<option value="3"> 3</option>
+		<option value="4"> 4</option>
+	</select>	
+	<br><input type="submit" value="Submit">
+</form>
+
 <h2>Audio erreproduktorea </h2>
 <table class="tableIkustezina">
 	<tr id="thIkusitezina">
