--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -37,14 +37,15 @@
 	</tr>
 </table>
 
-<form action="/video_HTML5_M.html" method="get" target="_self">
-	<select multiple="multiple">
+<form action="video_HTML5_M.html" method="GET" target="_self">
+	<select name="balioa" multiple>
 		<option value="1"> 1</option>
 		<option value="2"> 2</option>
 		<option value="3"> 3</option>
 		<option value="4"> 4</option>
 	</select>	
-	<br><input type="submit" value="Submit">
+	<br>
+	<input type="submit" value="Submit"/>
 </form>
 
 <h2>Audio erreproduktorea </h2>
