--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -4,6 +4,8 @@
   	<meta charset="utf-8">
   	<title>Oinarrizko App maketa</title>
   	<link rel="stylesheet" type="text/css" href="style.css">
+  
+  
   </head>
   <body>
   <form action="aukerak.html">
@@ -13,13 +15,10 @@
 <div style="text-align:center"> 
  <h1>Oinarrizko App maketa</h1>
  <h2>HTML5 erabiliz multimedia erreproduktorea </h2>
+ <h3 id="testua">i</h3>
  </div>
     <div class="player">
-      <video loop controls preload="metadata">
-        <source src="video/video.mp4" type="video/mp4">
-        <source src="video/video.mp4" type="video/webm">
-        <!-- fallback content here -->
-      </video>
+      <video id="Player" loop controls preload="metadata"></video>
       <div class="controls">
         <button class="play" data-icon="P" aria-label="play pause toggle"></button>
         <button class="stop" data-icon="S" aria-label="stop"></button>
