0:bata bestearen atzetik erreproduzitzea lortuta.

--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -18,7 +18,7 @@
  <h3 id="testua">i</h3>
  </div>
     <div class="player">
-      <video id="Player" loop controls preload="metadata"></video>
+      <video id="Player" autoplay controls preload="metadata"></video>
       <div class="controls">
         <button class="play" data-icon="P" aria-label="play pause toggle"></button>
         <button class="stop" data-icon="S" aria-label="stop"></button>
