--- a/oinarrizko_app_maketa/src/audio.html
+++ b/oinarrizko_app_maketa/src/audio.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" name="description" content="JavaScript Client Herald">
   <title>Oinarrizko App maketa</title>
   <link rel="stylesheet" type="text/css" href="estiloa.css"/>
+  
 </head>
 
 <body>
@@ -14,12 +15,13 @@
 <div style="text-align:center"> 
  <h1>Oinarrizko App maketa</h1>
  <h2>HTML5 erabiliz multimedia erreproduktorea </h2>
-
-<audio loop preload="metadata" id="audioPlayer" controls>
-  <source src="video/video.mp3" type="audio/mpeg">
+ <br>
+ <h3 id="izena"></h3>
+ <br>
+<audio loop preload="metadata" preload="metadata" id="audioErreproduktorea" controls type="audio/wav" width=50%>
   Tu navegador no soporta el audio de HTML5
 </audio>
 </div> 
-
+  <script src="audio_erreproduktorea.js"></script>
 </body>
 </html>
