--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -15,20 +15,22 @@
 <div style="text-align:center"> 
  <h1>Oinarrizko App maketa</h1>
  <h2>HTML5 erabiliz multimedia erreproduktorea </h2>
- <h3 id="testua">i</h3>
+ <h3 id="izena"></h3>
  </div>
     <div class="player">
-      <video id="Player" autoplay controls preload="metadata"></video>
+      <video playsinline="playinline" autoplay muted preload="metadata" poster="video/output.jpg" type='video/mp4'></video>
       <div class="controls">
         <button class="play" data-icon="P" aria-label="play pause toggle"></button>
         <button class="stop" data-icon="S" aria-label="stop"></button>
         <div class="timer"><div></div><span aria-label="timer">00:00</span></div>
         <button class="speed" data-icon="W" aria-label="speed"></button>
         <button class="loop" data-icon="U" aria-label="loop"></button>
+        <button class="full" data-icon="J" onclick="fullScreen()" aria-label="fast forward"></button>
         <button class="rwd" data-icon="B" aria-label="rewind"></button>
         <button class="fwd" data-icon="F" aria-label="fast forward"></button>
+        
       </div>
     </div>
-    <script src="custom-player.js"></script>
+    <script src="bideo_erreproduktorea.js"></script>
   </body>
 </html>
