0:Bideoak ordenatuta bidali

--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -40,7 +40,6 @@
 
 <h2>Bideoak aukeratu eta segidan bistaratu</h2>
 
-	<form action="video_HTML5_M.html" method="GET" target="_self">
 	<table class="tableIkustezina">
 		<tr>
 			<th>A</th><th>B</th><th>C</th>
@@ -60,8 +59,8 @@
 			</td>
 		</tr>
 	  </table>
-	  <input type="submit" value="Bideoa Bistaratu">
-  </form>
+	  <button class="submit" onclick="queryh()" value="BideoaBistaratu">BideoaBistaratu </button>
+	  <p id="alerta"></p>
 <!-- <form action="video_HTML5_M.html" method="GET" target="_self"> -->
 <!-- 	<select name="balioa" multiple> -->
 <!-- 		<option value="A_01_Aurretik"> A_01_Aurretik</option> -->
