0:pantailan bideo lista agertzen da

--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -16,46 +16,54 @@
 <p>
 <h3>Pantaila honetan erabiltzaileari pauso desberdinak aurkeztuko zaizkio, eta berak aukeratuko ditu berak ondoren ikusteko</h3>
 <p>
-<h2>Bideo erreproduktore desberdinak</h2>
+<!-- <h2>Bideo erreproduktore desberdinak</h2> -->
 
-<table class="tableIkustezina">
-	<tr id="thIkusitezina">
-		<td id="tdIkustezina">
-			<form action="./video_JS.html">
-				<input type="submit" value="JavaScript erabiliz">
-			</form>
-		</td>
-		<td id="tdIkustezina">
-			<form action="./video_HTML5.html">
-				<input type="submit" value="Oinarrizko HTML5">
-			</form>
-		</td>
-		<td id="tdIkustezina">
-			<form action="video_HTML5_M.html">
-				<input type="submit" value="HTML5 Modifikatuta">
-			</form>
-		</td>		
-	</tr>
-</table>
+<!-- <table class="tableIkustezina"> -->
+<!-- 	<tr id="thIkusitezina"> -->
+<!-- 		<td id="tdIkustezina"> -->
+<!-- 			<form action="./video_JS.html"> -->
+<!-- 				<input type="submit" value="JavaScript erabiliz"> -->
+<!-- 			</form> -->
+<!-- 		</td> -->
+<!-- 		<td id="tdIkustezina"> -->
+<!-- 			<form action="./video_HTML5.html"> -->
+<!-- 				<input type="submit" value="Oinarrizko HTML5"> -->
+<!-- 			</form> -->
+<!-- 		</td> -->
+<!-- 		<td id="tdIkustezina"> -->
+<!-- 			<form action="video_HTML5_M.html"> -->
+<!-- 				<input type="submit" value="HTML5 Modifikatuta"> -->
+<!-- 			</form> -->
+<!-- 		</td>		 -->
+<!-- 	</tr> -->
+<!-- </table> -->
 
 <h2>Bideoak aukeratu eta segidan bistaratu</h2>
 
 	<table class="tableIkustezina">
 		<tr>
-			<th>A</th><th>B</th><th>C</th>
+			<th>
+			<input type="checkbox" onclick="ugariAukeratu(value)" value="A">A
+			</th>
+			<th>
+			<input type="checkbox" onclick="ugariAukeratu(value)" value="B">B
+			</th>
+			<th>
+			<input type="checkbox" onclick="ugariAukeratu(value)" value="C">C
+			</th>
 		</tr>		
 		<tr>
 			<td>
-				<input type="checkbox" name="balioa" onclick="egiaztatu(value)" value="A_01_Aurretik">A_01_Aurretik   <p id="A_01_Aurretik"></p><br>
-		  		<input type="checkbox" name="balioa" onclick="egiaztatu(value)" value="A_09_Aurretik">A_09_Aurretik  <p id="A_09_Aurretik"></p><br>
+				<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_01_Aurretik">A_01_Aurretik   <p id="A_01_Aurretik"></p><br>
+		  		<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_09_Aurretik">A_09_Aurretik  <p id="A_09_Aurretik"></p><br>
 			</td>
 			<td>
-				<input type="checkbox" name="balioa" onclick="egiaztatu(value)" value="B_01_Aurretik">B_01_Aurretik <p id="B_01_Aurretik"></p><br>
-		  		<input type="checkbox" name="balioa" onclick="egiaztatu(value)" value="B_07_2_Aurretik">B_07_2_Aurretik <p id="B_07_2_Aurretik"></p><br>	
+				<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_01_Aurretik">B_01_Aurretik <p id="B_01_Aurretik"></p><br>
+		  		<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_07_2_Aurretik">B_07_2_Aurretik <p id="B_07_2_Aurretik"></p><br>	
 			</td>
 			<td>
-				<input type="checkbox" name="balioa" onclick="egiaztatu(value)" value="C_01_A_Aurretik">C_01_A_Aurretik <p id="C_01_A_Aurretik"></p><br>
-		  		<input type="checkbox" name="balioa" onclick="egiaztatu(value)" value="C_Bikotean_04">C_Bikotean_04 <p id="C_Bikotean_04"></p><br><br>
+				<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_01_A_Aurretik">C_01_A_Aurretik <p id="C_01_A_Aurretik"></p><br>
+		  		<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_Bikotean_04">C_Bikotean_04 <p id="C_Bikotean_04"></p><br><br>
 			</td>
 		</tr>
 	  </table>
