--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -12,11 +12,12 @@
 	<input type="submit" value="Atzera">
 
 </form>
-<div style="text-align:center"> 
- <h1>Oinarrizko App maketa</h1>
- <h2>HTML5 erabiliz multimedia erreproduktorea </h2>
- <h3 id="izena"></h3>
- </div>
+<div style="text-align:center" id="hasiera"> 
+	 <h1>Oinarrizko App maketa</h1>
+	 <h2>HTML5 erabiliz multimedia erreproduktorea </h2>
+	 <h3 id="izena"></h3>
+ </div >
+   
     <div class="player">
       <video playsinline="playinline" autoplay muted preload="metadata" poster="video/output.jpg" type='video/mp4'></video>
       <div class="controls">
@@ -31,6 +32,8 @@
         
       </div>
     </div>
+
+
     <script src="bideo_erreproduktorea.js"></script>
   </body>
 </html>
