0:Erabiltzaileak pausuen ordena aldatu dezake

--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
   	<title>Oinarrizko App maketa</title>
   	<link rel="stylesheet" type="text/css" href="style.css">
-  
+
   
   </head>
   <body>
@@ -14,12 +14,13 @@
 </form>
 <div style="text-align:center" id="hasiera"> 
 	 <h1>Oinarrizko App maketa</h1>
-	 <h2>HTML5 erabiliz multimedia erreproduktorea </h2>
+	 <h2>Pauso erreproduktorea </h2>
 	 <h3 id="izena"></h3>
  </div >
-   
+   <div style="text-align:center" id="lista">
+ </div>
     <div class="player">
-      <video playsinline="playinline" autoplay muted preload="metadata" poster="video/output.jpg" type='video/mp4'></video>
+      <video playsinline="playinline" preload="metadata" poster="video/output.jpg" type='video/mp4'></video>
       <div class="controls">
         <button class="play" data-icon="P" aria-label="play pause toggle"></button>
         <button class="stop" data-icon="S" aria-label="stop"></button>
@@ -32,8 +33,8 @@
         
       </div>
     </div>
+<br>
 
-
-    <script src="bideo_erreproduktorea.js"></script>
+      <script src="bideo_erreproduktorea.js"></script>
   </body>
 </html>
