0:Pausuak gehitu eta kendu

--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -17,7 +17,11 @@
 	 <h2>Pauso erreproduktorea </h2>
 	 <h3 id="izena"></h3>
  </div >
-   <div style="text-align:center" id="lista">
+ <div style="text-align:center" id="lista">
+ </div>
+ <div style="text-align:center" id="gehitu">
+ 	<select id="gehituSelect">
+ 	</select>
  </div>
     <div class="player">
       <video playsinline="playinline" preload="metadata" poster="video/output.jpg" type='video/mp4'></video>
