--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -5,7 +5,8 @@
   	<title>Oinarrizko App maketa</title>
   	<link rel="stylesheet" type="text/css" href="style.css">
   	<link rel="stylesheet" type="text/css" href="fontawesome-free-5.15.2-web/css/all.css">
-
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+ 
   
   </head>
   <body>
@@ -14,8 +15,8 @@
 
 </form>
 <div style="text-align:center" id="hasiera"> 
-	 <h1>Oinarrizko App maketa</h1>
-	 <h2>Pauso erreproduktorea </h2>
+	 <h1 class="title is-1">Oinarrizko App maketa</h1>
+	 <h2 class="title is-2">Pauso erreproduktorea </h2>
 	 <h3 id="izena"></h3>
  </div >
 
@@ -45,7 +46,7 @@
 	        
 	      </div>
 	    </div>
-	     <div class="lista" id="lista">
+	     <div class="lista " id="lista">
 	     
 	 	</div> 
 	 	<div style="text-align:center ;padding-top: 5%;" id="gehitu">
