--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8" name="description" content="JavaScript Client Herald">
   <title>Oinarrizko App maketa</title>
   <link rel="stylesheet" type="text/css" href="src/estiloa.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
 
 <body>
-<h1>Oinarrizko App maketa</h1>
-<h2 >Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
+<h1 class="title is-1">Oinarrizko App maketa</h1>
+<h2 class="subtitle">Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
 
 <table class="tableIkustezina">
 	<tr id="thIkusitezina">
