--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" name="description" content="JavaScript Client Herald">
   <title>Oinarrizko App maketa</title>
   <link rel="stylesheet" type="text/css" href="./estiloa.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
   <script src="aukerak.js"></script>
 </head>
 
@@ -12,10 +13,8 @@
 <form action="../index.html">
 	<input type="submit" value="Atzera">
 </form>
-<h1>Oinarrizko App maketa</h1>
-<p>
-<h3>Pantaila honetan erabiltzaileari pauso desberdinak aurkeztuko zaizkio, eta berak aukeratuko ditu berak ondoren ikusteko</h3>
-<p>
+<h1 class="title is-1">Oinarrizko App maketa</h1>
+<h3 class="subtitle">Pantaila honetan erabiltzaileari pauso desberdinak aurkeztuko zaizkio, eta berak aukeratuko ditu berak ondoren ikusteko</h3>
 <!-- <h2>Bideo erreproduktore desberdinak</h2> -->
 
 <!-- <table class="tableIkustezina"> -->
@@ -37,39 +36,96 @@
 <!-- 		</td>		 -->
 <!-- 	</tr> -->
 <!-- </table> -->
-<br>
-<br>
-<h2>Bideoak aukeratu eta segidan bistaratu</h2>
+<div class="tableIkustezina buttons are-large is-centered"">
+			<button class="button is-rounded is-link is-inverted" onclick="divBistaratu('bideoAukeratu','audioAukeratu')">Pausoen bideoak</button>
+			<button class="button is-rounded is-link is-inverted" onclick="divBistaratu('audioAukeratu','bideoAukeratu')">Audioak</button>
+</div>
 
-	<table class="tableIkustezina">
-		<tr>
-			<th>
-			<input type="checkbox" onclick="ugariAukeratu(value)" value="A">A Dantza
-			</th>
-			<th>
-			<input type="checkbox" onclick="ugariAukeratu(value)" value="B">B Dantza
-			</th>
-			<th>
-			<input type="checkbox" onclick="ugariAukeratu(value)" value="C">C Dantza
-			</th>
-		</tr>		
-		<tr>
-			<td>
-				<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_01_Aurretik">A_01_Aurretik   <p id="A_01_Aurretik"></p><br>
-		  		<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_09_Aurretik">A_09_Aurretik  <p id="A_09_Aurretik"></p><br>
-			</td>
-			<td>
-				<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_01_Aurretik">B_01_Aurretik <p id="B_01_Aurretik"></p><br>
-		  		<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_07_2_Aurretik">B_07_2_Aurretik <p id="B_07_2_Aurretik"></p><br>	
-			</td>
-			<td>
-				<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_01_A_Aurretik">C_01_A_Aurretik <p id="C_01_A_Aurretik"></p><br>
-		  		<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_Bikotean_04">C_Bikotean_04 <p id="C_Bikotean_04"></p><br><br>
-			</td>
-		</tr>
-	  </table>
-	  <button class="submit" onclick="queryh()" value="BideoaBistaratu">Dantzan hasi! </button>
-	  <p id="alerta"></p>
+<div class="bistaratu"id="bideoAukeratu">
+	<h3 class="subtitle is-5">Bideoak aukeratu eta segidan bistaratu</h3>
+
+<!-- 	<table class="tableIkustezina"> -->
+<!-- 		<tr> -->
+<!-- 			<th> -->
+<!-- 			<input type="checkbox" onclick="ugariAukeratu(value)" value="A">A Dantza -->
+<!-- 			</th> -->
+<!-- 			<th> -->
+<!-- 			<input type="checkbox" onclick="ugariAukeratu(value)" value="B">B Dantza -->
+<!-- 			</th> -->
+<!-- 			<th> -->
+<!-- 			<input type="checkbox" onclick="ugariAukeratu(value)" value="C">C Dantza -->
+<!-- 			</th> -->
+<!-- 		</tr>		 -->
+<!-- 		<tr> -->
+<!-- 			<td> -->
+<!-- 				<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_01_Aurretik">A_01_Aurretik   <p id="A_01_Aurretik"></p><br> -->
+<!-- 		  		<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_09_Aurretik">A_09_Aurretik  <p id="A_09_Aurretik"></p><br> -->
+<!-- 			</td> -->
+<!-- 			<td> -->
+<!-- 				<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_01_Aurretik">B_01_Aurretik <p id="B_01_Aurretik"></p><br> -->
+<!-- 		  		<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_07_2_Aurretik">B_07_2_Aurretik <p id="B_07_2_Aurretik"></p><br>	 -->
+<!-- 			</td> -->
+<!-- 			<td> -->
+<!-- 				<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_01_A_Aurretik">C_01_A_Aurretik <p id="C_01_A_Aurretik"></p><br> -->
+<!-- 		  		<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_Bikotean_04">C_Bikotean_04 <p id="C_Bikotean_04"></p><br><br> -->
+<!-- 			</td> -->
+<!-- 		</tr> -->
+<!-- 	  </table> -->
+	  
+	<div class="columns is-multiline is-centered">
+	  <div class="column is-third">
+	  	<table>
+	  		<tr>
+	  			<th>
+				<input type="checkbox" onclick="ugariAukeratu(value)" value="A">A Dantza
+				</th>
+	  		</tr>
+	  		<tr>
+	  			<td>
+					<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_01_Aurretik">A_01_Aurretik   <p id="A_01_Aurretik"></p><br>
+			  		<input type="checkbox" class="A" onclick="egiaztatu(value)" value="A_09_Aurretik">A_09_Aurretik  <p id="A_09_Aurretik"></p><br>
+				</td>
+	  		</tr>
+	  	</table>
+	  </div>
+	  <div class="column is-third">
+	  	<table>
+	  		<tr>
+	  			<th>
+				<input type="checkbox" onclick="ugariAukeratu(value)" value="B">B Dantza
+				</th>
+	  		</tr>
+	  		<tr>
+	  			<td>
+					<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_01_Aurretik">B_01_Aurretik <p id="B_01_Aurretik"></p><br>
+			  		<input type="checkbox" class="B" onclick="egiaztatu(value)" value="B_07_2_Aurretik">B_07_2_Aurretik <p id="B_07_2_Aurretik"></p><br>	
+				</td>
+	  		</tr>
+	  	</table>
+	  </div>
+	  <div class="column is-third">
+	  	<table>
+	  		<tr>
+	  			<th>
+				<input type="checkbox" onclick="ugariAukeratu(value)" value="C">C Dantza
+				</th>
+	  		</tr>
+	  		<tr>
+	  			<td>
+					<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_01_A_Aurretik">C_01_A_Aurretik <p id="C_01_A_Aurretik"></p><br>
+			  		<input type="checkbox" class="C" onclick="egiaztatu(value)" value="C_Bikotean_04">C_Bikotean_04 <p id="C_Bikotean_04"></p><br><br>
+				</td>
+	  		</tr>
+	  	</table>
+	  </div>
+</div>
+	<div class="columns is-centered is-narrow">
+			<button  class="button is-info " onclick="queryh()" value="BideoaBistaratu">Dantzan hasi! </button>
+	  <p id="alerta">
+	</div>
+</div>
+	  
+
 <!-- <form action="video_HTML5_M.html" method="GET" target="_self"> -->
 <!-- 	<select name="balioa" multiple> -->
 <!-- 		<option value="A_01_Aurretik"> A_01_Aurretik</option> -->
@@ -82,23 +138,25 @@
 <!-- 	<br> -->
 <!-- 	<input type="submit" value="Bideoa Bistaratu"/> -->
 <!-- </form> -->
-
-<h2>Audio erreproduktorea </h2>
-<table class="tableIkustezina">
-	<tr id="thIkusitezina">
-		<td id="tdIkustezina">
-			<form action="audio.html">
-				<select name="balioa">
-				<option value="A"> A</option>
-				<option value="B">B</option>
-				<option value="C">C</option>
-				<option value="OSOA">OSOA</option>
-				</select>	
-			<br>
-			<input type="submit" value="Audioa erreproduzitu"/>
-			</form>
-		</td>	
-	</tr>
-</table>
+</div>
+<div class="ezkutatu" id="audioAukeratu">
+	<h3 class="subtitle is-5">Audio erreproduktorea </h3>
+	<table class="tableIkustezina">
+		<tr id="thIkusitezina">
+			<td id="tdIkustezina">
+				<form action="audio.html">
+					<select name="balioa">
+					<option value="A"> A</option>
+					<option value="B">B</option>
+					<option value="C">C</option>
+					<option value="OSOA">OSOA</option>
+					</select>	
+				<br>
+				<input type="submit" value="Audioa erreproduzitu"/>
+				</form>
+			</td>	
+		</tr>
+	</table>
+</div>
 </body>
 </html>
