0:diseinua oso hobetuta

--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -9,19 +9,21 @@
 </head>
 
 <body>
-<h1 class="title is-1">Oinarrizko App maketa</h1>
+<section class="section is-large is-mobile">
+<h1 class="title is-1 is-spaced">Oinarrizko App maketa</h1>
 <h2 class="subtitle">Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
 
 <table class="tableIkustezina">
 	<tr id="thIkusitezina">
 		<td id="tdIkustezina">
 			<form action="./src/aukerak.html">
-				<input class="submit" type="submit" value="Hasi">
+				<input class="button is-info is-large" type="submit" value="Hasi">
 			</form>
 		</td>
 				
 	</tr>
 </table>
+</section>
 
 </body>
 </html>
