--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -9,22 +9,51 @@
 </head>
 
 <body>
-<section class="section is-large is-mobile">
-<h1 class="title is-1 is-spaced">Oinarrizko App maketa</h1>
-<h2 class="subtitle">Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
-
-<table class="tableIkustezina">
-	<tr id="thIkusitezina">
-		<td id="tdIkustezina">
-			<form action="./src/aukerak.html">
-				<input class="button is-info is-large" type="submit" value="Hasi">
-			</form>
-		</td>
-				
-	</tr>
-</table>
+<section class="section is-large is-tablet ">
+	<h1 class="title is-1 is-spaced">Oinarrizko App maketa</h1>
+	<h2 class="subtitle">Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
+	
+	<table class="tableIkustezina">
+		<tr id="thIkusitezina">
+			<td id="tdIkustezina">
+				<form action="./src/aukerak.html">
+					<input class="button is-info is-large" type="submit" value="Hasi">
+				</form>
+			</td>
+					
+		</tr>
+	</table>
 </section>
 
+<section class="hero is-link is-medium">
+  	<div class="hero-body">
+    	<p class="title">
+      	Funtzionalitateak
+    	</p>
+		<form action="./src/aukerak.html">
+			<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
+		</form>
+	</div>
+</section>
+
+<section class="hero is-success is-medium">
+  	<div class="hero-body">
+    	<p class="title">
+      	Erreproduktorea
+    	</p>
+		<form action="./src/aukerak.html">
+			<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
+		</form>
+	</div>
+</section>
+
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+    	Oinarrizko App maketa - Iker Hernandez  
+    </p>
+  </div>
+</footer>
 </body>
 </html>
 
