--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -195,7 +195,7 @@
 				</div>
 			</div>
 			<div class="level-right is-centered mr-6 ml-2 my-5  py-5">
-				<audio class="is-centered"loop preload="metadata" preload="metadata" id="audioPlayer" controls type="audio/wav" width=50%>
+				<audio class="is-centered"loop preload="metadata" preload="metadata" id="audioPlayer" controls type="audio/mp3" width=50%>
 				  Tu navegador no soporta el audio de HTML5
 				</audio>
 			</div>
