--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -98,6 +98,6 @@
   </div>
 </footer>
       <script src="bideo_erreproduktorea.js"></script>
-      <audio id="audioPlayer" style="display:none;" loop src="video/J_A.wav"></audio>
+      <audio id="audioPlayer" style="display:none;" loop src="video/J_A.mp3"></audio>
   </body>
 </html>
