--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -3,21 +3,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" name="description" content="JavaScript Client Herald">
-  <title>Oinarrizko App maketa</title>
+  <title>Aiko Dantza Eskola</title>
   <link rel="stylesheet" type="text/css" href="src/estiloa.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <link rel="icon" type="image/png" href="/src/icon.png">
 </head>
 
 <body>
-<section class="section is-large is-tablet ">
-	<h1 class="title is-1 is-spaced">Oinarrizko App maketa</h1>
-	<h2 class="subtitle">Hasierako pantaila nun aplikazioaren deskribapena agertuko den eta erabiltzaileak zuzenean aplikazioan sartu ahal den</h2>
-	
+<section class="section is-medium is-tablet ">
+	<h1 class="title is-1 is-spaced"><img src="/src/icon.png" alt="" style="height: 300px;"></h1>
+	<h1 class="title is-1 is-spaced">Dantza Eskola Digitala</h1>
 	<table class="tableIkustezina">
 		<tr id="thIkusitezina">
 			<td id="tdIkustezina">
 				<form action="./src/aukerak.html">
-					<input class="button is-info is-large" type="submit" value="Hasi">
+					<input class="button naranja is-large" type="submit" value="Hasi">
 				</form>
 			</td>
 					
@@ -25,14 +25,39 @@
 	</table>
 </section>
 
-<section class="hero is-link is-medium">
+<section class="hero naranja is-medium">
   	<div class="hero-body">
-    	<p class="title">
-      	Funtzionalitateak
-    	</p>
-		<form action="./src/aukerak.html">
-			<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
-		</form>
+		<div class="columns is-vcentered">
+			<div class="ml-2 column is-one-quarter">
+				<p class="title naranja">Funtzionalitateak</p>
+		    	<form action="./src/aukerak.html">
+					<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
+				</form>
+	
+			</div>
+			<div class="mr-5 column is-three-quarters"> 
+				<div class="tile is-ancestor">
+			  <div class="tile is-4 is-vertical is-parent">
+			    <div class="tile is-child box">
+			      <p class="title">One</p>
+			      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+			    </div>
+			    <div class="tile is-child box">
+			      <p class="title">Two</p>
+			      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+			    </div>
+			  </div>
+			  <div class="tile is-parent">
+			    <div class="tile is-child box">
+			      <p class="title">Three</p>
+			      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
+			      <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at volutpat tortor.</p>
+			      <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus dolor consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper leo.</p>
+			    </div>
+			  </div>
+			</div>
+			</div>
+		</div>
 	</div>
 </section>
 
