--- a/oinarrizko_app_maketa/src/video_HTML5_M.html
+++ b/oinarrizko_app_maketa/src/video_HTML5_M.html
@@ -2,11 +2,11 @@
 <html lang="en-gb">
   <head>
   	<meta charset="utf-8">
-  	<title>Oinarrizko App maketa</title>
+  	<title>Aiko Dantza Eskola</title>
   	<link rel="stylesheet" type="text/css" href="style.css">
   	<link rel="stylesheet" type="text/css" href="fontawesome-free-5.15.2-web/css/all.css">
  	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
- 
+ 	<link rel="icon" type="image/png" href="./icon.png">
   
   	</head>
   	<body>
@@ -19,7 +19,7 @@
 				</form>
   			</div>
   			<div class="level-item has-text-centered">
-  				<h1 class="title">Oinarrizko App maketa</h1>
+  				<img src="logo.png" alt="" style="height: 30px;">
   			</div>
   		</nav>
 </div>
@@ -49,7 +49,7 @@
 					  <!-- Left side -->
 					  <div class="level-left">
 						<div class="level-item" >
-						 	<p class="title is-5">Countdown: </p> 					 	
+						 	<p class="title is-5">Countdown :</p> 					 	
 						 	<input class="ml-4" type="number" style="width: 70px" id="countdownValue" name="tentacles" value="5" min="1" max="15">	
 							<label class="switch ml-4">
 								<input type="checkbox" id="countdownId">
@@ -63,15 +63,15 @@
 				</nav>
 			</div>
 			<div class="my-5">
-				<p class="title is-5">Aukeratutako bideoak:</p>
+				<p class="title is-5">Aukeratutako bideoak :</p>
 			</div>
 		   	<div class="lista mt-3 ml-5" id="lista"></div>
 
 		   	<nav class="level is-mobile mt-4 ml-5">
 		   		<div class="level-left">
-				  <div class="level-item select is-warning is-small" id="gehitu">
+				  <div class="level-item select is-small" id="gehitu">
 				  		<p class="subtitle is-5 mr-2">Pausoa gehitu:</p>
-					 	<select id="gehituSelect">
+					 	<select class="naranja" id="gehituSelect">
 					 	</select>
 					</div>
 					<div class="level-item">				 	
@@ -163,13 +163,6 @@
 	 	
  	</div>
  </div>
- <footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-    	Oinarrizko App maketa - Iker Hernandez  
-    </p>
-  </div>
-</footer>
 	<audio id="audioPlayer" style="display:none;" loop></audio>
     <audio id="laburEntzunErreproduktorea" style="display:none;"></audio>
     <script src="bideo_erreproduktorea.js"></script>      
