0:Hasierako orrialdea hobetuta

--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -6,6 +6,7 @@
   <title>Aiko Dantza Eskola</title>
   <link rel="stylesheet" type="text/css" href="src/estiloa.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="src/fontawesome-free-5.15.2-web/css/all.css">
   <link rel="icon" type="image/png" href="/src/icon.png">
 </head>
 
@@ -17,7 +18,7 @@
 		<tr id="thIkusitezina">
 			<td id="tdIkustezina">
 				<form action="./src/aukerak.html">
-					<input class="button naranja is-large" type="submit" value="Hasi">
+					<input class="button naranja is-large" type="submit" value="Dantzan hasi!">
 				</form>
 			</td>
 					
@@ -25,53 +26,165 @@
 	</table>
 </section>
 
-<section class="hero naranja is-medium">
+<section class="hero naranja is-small">
   	<div class="hero-body">
 		<div class="columns is-vcentered">
 			<div class="ml-2 column is-one-quarter">
-				<p class="title naranja">Funtzionalitateak</p>
+				<p class="title naranja">Dantzak</p>
 		    	<form action="./src/aukerak.html">
 					<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
 				</form>
 	
 			</div>
-			<div class="mr-5 column is-three-quarters"> 
-				<div class="tile is-ancestor">
-			  <div class="tile is-4 is-vertical is-parent">
-			    <div class="tile is-child box">
-			      <p class="title">One</p>
-			      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-			    </div>
-			    <div class="tile is-child box">
-			      <p class="title">Two</p>
-			      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-			    </div>
-			  </div>
+			<div class="column my-2 is-three-quarters"> 
+				<div class="tile mx-4 my-2 is-ancestor">
 			  <div class="tile is-parent">
 			    <div class="tile is-child box">
-			      <p class="title">Three</p>
-			      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
-			      <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at volutpat tortor.</p>
-			      <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus dolor consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper leo.</p>
-			    </div>
+			      <p class="title"><i class="far fa-edit mx-2"> </i>Pertsonalizatua</p>
+			      <div class="content is-medium">			      
+						<ul>
+					      <li class="my-4">Eskuragarri dauden pausuak erabiliz nahi duzun dantza sortu dezakezu</li>
+					      <li class="my-4">Uneoro pausuen ordena aldatu dezakez, dantza paregabe bat eraikitzeko</li>
+					      <li class="my-4">Pausuak gehitu edo kendu, inolako zailtasunik gabe</li>
+					      <li class="my-4">Audioa aldatu, pausuak musika batekin ikasteko</li>
+					    </ul> 
+				    </div> 
+			      </div>
+			  </div>
+			  <div class="tile mx-2 is-parent">
+			    <div class="tile is-child box">
+			      <p class="title"><i class="fas fa-film mx-2"></i>Jota/Porrue edo Arin-Arina</p>
+			      <div class="content is-medium">			      
+					<ul>
+				      <li class="my-4">Bizkaiko jotak eta porruak dantzatzen ikasi zure erara</li>
+				      <li class="my-4">Dantza mota honen egitura jarraitzen duen pauso segida aukeratu eta dantza ikasi</li>
+				      <li class="my-4">Nahiz eta dantza hau ez ezagutu, uneoro pausuak aukeratzen lagunduko dizugu </li>
+				    </ul> 
+				    </div> 
+			     </div>
 			  </div>
 			</div>
 			</div>
 		</div>
 	</div>
 </section>
-
-<section class="hero is-success is-medium">
-  	<div class="hero-body">
-    	<p class="title">
-      	Erreproduktorea
-    	</p>
-		<form action="./src/aukerak.html">
-			<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
-		</form>
+<section class="section is-medium">
+  <div class="tile is-ancestor">
+  <div class="tile is-vertical is-parent">
+    <div class="tile is-child box">
+      <p class="subtitle naranja-kolorea">Pausuak aukeratu</p>
+      <figure class="image">
+            <img src="src/2.jpg" height= "80" width="235""/>
+          </figure>
+    </div>
+  </div>
+  <div class="tile is-parent">
+    <div class="tile is-child box">
+      <p class="subtitle naranja-kolorea">Dantza erreproduktorea</p>
+      <figure class="image">
+            <img src="src/1.jpg" height= "80" width="235"/>
+          </figure>
+    </div>
+  </div>
+</div>
+</section>
+<section class="hero naranja is-small">
+  	<div class="hero-body my-2">
+		<div class="columns is-vcentered">
+			<div class="column my-2 is-three-quarters"> 
+				<div class="tile mx-2 is-ancestor">
+					  <div class="tile is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Pausuak aukeratu</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					  <div class="tile  mx-2 is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Ordena aldatu</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					  <div class="tile mx-2 is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Pausua gehitu/kendu</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					</div>
+					<div class="tile mx-2 is-ancestor">
+					  <div class="tile is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Audioa aldatu</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					  <div class="tile  mx-2 is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Countdown</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					  <div class="tile mx-2 is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Abiadura aldatu</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					</div>
+					<div class="tile mx-2 is-ancestor">
+					  <div class="tile is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Audio erreproduktorea</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					  <div class="tile  mx-2 is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Hurrengo/Aurreko pausua</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					  <div class="tile mx-2 is-parent">
+					    <article class="tile is-child box">
+					      <p class="title">Loop</p>
+					      <p class="subtitle">Subtitle</p>
+					    </article>
+					  </div>
+					</div>
+  				</div>
+		<div class="column my-2 mx-4 is-one-quarter">
+				<p class="title naranja">Funtzionalitateak</p>
+		    	<form action="./src/aukerak.html">
+					<input class="button is-outlined is-light is-large" type="submit" value="Hasi">
+				</form>
+	
+			</div>
+		</div>
 	</div>
 </section>
-
+<section class="section is-medium">
+  <div class="tile is-ancestor">
+  <div class="tile is-vertical is-parent">
+    <div class="tile is-child box" style="display:inline-block;vertical-align:middle;">
+    	<div style="display:inline-block;vertical-align:middle;">
+	    	<a href="https://www.ehu.eus/es/"><img src="src/logo.png" height= "235" width="235""/></a>
+		</div>
+      <p class="title">Aiko</p>
+      <p class="subtitle">Dantza taldea</p>
+    </div>
+  </div>
+  <div class="tile is-parent">
+    <div class="tile is-child box" style="display:inline-block;vertical-align:middle;">
+    	<div style="display:inline-block;vertical-align:middle;">
+	    	<a href="https://www.ehu.eus/es/"><img src="src/ehu.jpg" height= "235" width="235""/></a>
+		</div>
+      <p class="title">UPV/EHU</p>
+      <p class="subtitle">Unibertsitatea</p>
+    </div>
+  </div>
+</div>
+</section>
 <footer class="footer">
 <div style="text-align: center;">
 	<div style="display:inline-block;vertical-align:middle;">
