Ehu logoa hasieran

--- a/oinarrizko_app_maketa/index.html
+++ b/oinarrizko_app_maketa/index.html
@@ -17,7 +17,19 @@
 	       Your browser does not support the video tag. I suggest you upgrade your browser.
 	   </video>
 	<div class="hero-body ongietorri-body">
-		<h1 class="title is-1 is-spaced"><img src="/src/icon.png" alt="" style="height: 300px;"></h1>
+		
+		<nav class="level mt-3 pt-3">
+			<div class="level-item has-text-centered">
+			  <div>
+				<h1 class="title is-1 is-spaced"><img src="/src/icon.png" alt="" style="height: 300px;"></h1>
+			  </div>
+			</div>
+			<div class="level-item has-text-centered">
+			  <div>
+				<h1 class="title is-1 is-spaced"><img src="/src/ehu_trans.png" alt="" style="height: 300px;"></h1>
+			  </div>
+			</div>
+		  </nav>
 		<h1 class="title is-1 is-spaced">Dantza Eskola Digitala</h1>
 		<table class="tableIkustezina">
 			<tr id="thIkusitezina">
@@ -81,7 +93,7 @@
     <div class="tile is-child box">
       <p class="subtitle is-4 my-1 naranja-kolorea">Pausuak aukeratu</p>
       <figure class="image">
-            <img src="src/2.png" height= "80" width="235""/>
+            <img src="src/2.png" height= "80" width="235"/>
           </figure>
     </div>
   </div>
